--- a/fronted/package.json
+++ b/fronted/package.json
@@ -15,7 +15,7 @@
     "flowbite-react": "^0.1.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
